test/compile-fail/scope/use-crate-name/expected.txt
error: unresolved import `a`
 --> top.rhdl:1:4
  |
1 | use crate::a;
  |     ^^^^^^^^ no `a` in `crate`
